手动修复部分

--- a/zh-CN/100.users-guide/600.basic-database-management/200.configuration-management/100.introduction-to-configuration-management.md
+++ b/zh-CN/100.users-guide/600.basic-database-management/200.configuration-management/100.introduction-to-configuration-management.md
@@ -21,7 +21,7 @@ OceanBase 数据库通过设置配置项和系统变量来完成配置管理。
 |---------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | 生效范围    | 集群、租户、Zone、机器。                                                                                                                                                                                                                                                                                                                                                                                                                             | 租户的 Global 级别或 Session 级别。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | 生效方式    | <li>动态生效：`edit_level` 为`dynamic_effective`。</li> <li> 重启生效：`edit_level` 为 `static_effective`。</li>                                                                                                                                                                                                                                                                   | <li>设置 Session 级别的变量仅对当前 Session 有效，对其他 Session 无效。</li><li> 设置 Global 级别的变量对当前 Session 无效，需要重新登录建立新的 Session 才会生效。                                                                                                                                                                                                                                                                                                                        |
-| 修改方式    | <li> 支持通过 SQL 语句修改，示例如下：<br> ```unknow obclient> Alter SYSTEM SET schema_history_expire_time='1h'```  具体请参见 [设置参数](../200.configuration-management/200.set-parameters.md)。 </li>  <li> 支持通过启动参数修改，示例如下：<br> ```unknow cd /home/admin && ./bin/observer -o "schema_history_expire_time='1h'"```    | 仅支持通过 SQL 语句修改，示例如下：<br>  MySQL 模式 ```sql obclient> SET ob_query_timeout = 20000000; obclient> SET GLOBAL ob_query_timeout = 20000000;```    具体请参见 [设置变量](../2.configuration-management/../200.configuration-management/300.set-variables.md)。 |
+| 修改方式    | <li> 支持通过 SQL 语句修改，示例如下：<br> ```unknow obclient> Alter SYSTEM SET schema_history_expire_time='1h'```  具体请参见 [设置参数](../200.configuration-management/200.set-parameters.md)。 </li>  <li> 支持通过启动参数修改，示例如下：<br> ```unknow cd /home/admin && ./bin/observer -o "schema_history_expire_time='1h'"```    | 仅支持通过 SQL 语句修改，示例如下：<br>  MySQL 模式 ```sql obclient> SET ob_query_timeout = 20000000; obclient> SET GLOBAL ob_query_timeout = 20000000;```    具体请参见 [设置变量](../200.configuration-management/300.set-variables.md)。 |
 | 持久化     | 持久化到内部表与配置文件，可以在 `/home/admin/oceanbase/etc/observer.config.bin` 与 `/home/admin/oceanbase/etc/observer.config.bin.history` 文件中查询该配置项。                                                                                                                                                                                                                                                                                                      | 仅 GLOBAL 级别的变量会持久化到内部表，SESSION 级别的变量不会进行持久化。                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 | 生命周期    | 长，从进程启动到退出。                                                                                                                                                                                                                                                                                                                                                                                                                                | 短，需要租户的 Schema 创建成功以后才生效。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | 查询方式    | 可以使用 `SHOW PARAMETERS` 语句查询。                                                                                                                                                                                                                                                                                                                                                                                                               | 可以使用 `SHOW [GLOBAL] VARIABLES` 或 `SELECT` 语句查询。                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
