--- a/zh-CN/300.performance-whitepaper/500.run-the-tpc-c-benchmark-on-oceanbase-database.md
+++ b/zh-CN/300.performance-whitepaper/500.run-the-tpc-c-benchmark-on-oceanbase-database.md
@@ -652,7 +652,7 @@ stockLevelWeight=4
 
 > **说明**
 >
-> 测试结果可参考 [OceanBase TPC-C 性能测试报告](../3.performance-whitepaper/../300.performance-whitepaper/600.tpc-c-benchmark-report-of-oceanbase-database.md)。
+> 测试结果可参考 [OceanBase TPC-C 性能测试报告](../300.performance-whitepaper/600.tpc-c-benchmark-report-of-oceanbase-database.md)。
 
 ## FAQ
 
