--- a/zh-CN/600.administrator-guide/300.basic-database-management/500.tenant-management/200.create-a-user-tenant.md
+++ b/zh-CN/600.administrator-guide/300.basic-database-management/500.tenant-management/200.create-a-user-tenant.md
@@ -115,4 +115,4 @@ OceanBase 数据库默认会自动创建 sys 租户，sys 租户负责一部分 
 创建用户
 -------------------------
 
-首次使用新租户连接 OceanBase 数据库时，您必须使用 `root` 用户。成功连接后，您可以创建新用户连接 OceanBase 数据库。详细信息，参考 [创建用户](../../3.basic-database-management/5.tenant-management/2.create-a-user-tenant.md) 文档。
+首次使用新租户连接 OceanBase 数据库时，您必须使用 `root` 用户。成功连接后，您可以创建新用户连接 OceanBase 数据库。详细信息，参考 [创建用户](../../700.manage-user-privileges/200.create-a-user.md) 文档。
