--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/1.pl-of-oracle-mode/2.stored-procedure-of-oracle-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/1.pl-of-oracle-mode/2.stored-procedure-of-oracle-mode.md
@@ -23,7 +23,7 @@ END;
 
 ```sql
 CREATE [OR REPLACE] PROCEDURE Procedure_name
-[ (argment [ { IN | IN OUT }] Type,
+[ argment [ { IN | IN OUT }] Type,
       argment [ { IN | OUT | IN OUT } ] Type ]
     [ AUTHID DEFINER | CURRENT_USER ]
 { IS | AS }
@@ -38,6 +38,7 @@ END;
 无参数的存储过程示例如下：
 
 ```sql
+obclient> DELIMITER /
 obclient> CREATE TABLE loghistory 
       (userid VARCHAR2(20), 
       logdate DATE DEFAULT SYSDATE);
