--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/2.stored-procedure-of-mysql-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/2.stored-procedure-of-mysql-mode.md
@@ -40,6 +40,7 @@ routine_body:
 示例如下：
 
 ```sql
+obclient> DELIMITER /
 obclient> CREATE TABLE city(CountryCode CHAR(3))/
 Query OK, 0 rows affected
 
