--- a/zh-CN/7.reference/15.command-line-tools/13.mysqltest/2.use-of-case/1.add-a-case.md
+++ b/zh-CN/7.reference/15.command-line-tools/13.mysqltest/2.use-of-case/1.add-a-case.md
@@ -26,7 +26,7 @@
 3. 生产结果文件：
 
     ```bash
-    obd test mysqltest <deploy name> --test-set version.sample --record
+    ./obd.sh mysqltest -n <deploy name> --test-set version.sample --record
     ```
 
 4. 人工校验结果文件后（这步也可以通过执行与 MySQL 的对比来完成）:
@@ -38,7 +38,7 @@
 5. 再运行检查一遍：
 
     ```bash
-    obd test mysqltest <deploy name> --test-set version.sample
+    ./obd.sh mysqltest -n <deploy name> --test-set version.sample
     ```
 
 6. 提交时注意 git add 的时候要同时提交 test 文件和 result 文件。
