修改 2.stored-procedure-of-oracle-mode.md

--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/1.pl-of-oracle-mode/2.stored-procedure-of-oracle-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/1.pl-of-oracle-mode/2.stored-procedure-of-oracle-mode.md
@@ -42,7 +42,7 @@ obclient> CREATE TABLE loghistory
       (userid VARCHAR2(20), 
       logdate DATE DEFAULT SYSDATE);
 Query OK, 0 rows affected 
-
+obclient> DELIMITER /
 obclient> CREATE OR REPLACE PROCEDURE userlogin 
       IS
   BEGIN
