--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.database-object-planning-of-oracle-mode/4.create-external-table-in-develop-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.database-object-planning-of-oracle-mode/4.create-external-table-in-develop-of-oracle-mode.md
@@ -81,7 +81,7 @@ CREATE EXTERNAL TABLE students_csv external_options
 
 外表的列不能定义约束，例如，`DEFAULT`、`NOT NULL`、`UNIQUE`、`CHECK`、`PRIMARY KEY`、`FOREIGN KEY` 等。
 
-外表支持的列类型与普通表一致。OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [内建数据类型概述](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
+外表支持的列类型与普通表一致。OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [内建数据类型概述](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
 
 ### 定义 LOCATION
 
@@ -109,7 +109,7 @@ OceanBase 数据库支持以下两种路径格式：
 * `FIELD_DELIMITER`：指定 CSV 文件的列分隔符。默认值为 `FIELD_DELIMITER='\t'`。
 * `ESCAPE`：指定 CSV 文件的转义符号，只能为 1 个字节。默认值为 `ESCAPE ='\'`。
 * `FIELD_OPTIONALLY_ENCLOSED_BY`：指定 CSV 文件中包裹字段值的符号。默认值为空。
-* `ENCODING`：指定文件的字符集编码格式。当前 Oracle 模式支持的所有字符集请参见 [字符集](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/1.overview-of-data-type-comparison-rules-of-oracle-mode.md)。如果不指定，默认值为 `UTF8MB4`。
+* `ENCODING`：指定文件的字符集编码格式。当前 Oracle 模式支持的所有字符集请参见 [字符集](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/1.overview-of-data-type-comparison-rules-of-oracle-mode.md)。如果不指定，默认值为 `UTF8MB4`。
 * `NULL_IF`：指定被当作 `NULL` 处理的字符串。默认值为空。
 * `SKIP_HEADER`：跳过文件头，并指定跳过的行数。
 * `SKIP_BLANK_LINES`：指定是否跳过空白行。默认值为 `FALSE`，表示不跳过空白的行。
