--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
@@ -90,7 +90,7 @@ start_and_end_option:
 
     <main id="notice" type='notice'>
       <h4>注意</h4>
-      <p>由于安全原因，设置系统变量 <code>secure_file_priv</code> 时，只能通过本地 Socket 连接数据库执行修改该全局变量的 SQL 语句。更多信息，请参见 <a href="../../../7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md">secure_file_priv</a>。</p>
+      <p>由于安全原因，设置系统变量 <code>secure_file_priv</code> 时，只能通过本地 Socket 连接数据库执行修改该全局变量的 SQL 语句。更多信息，请参见 <a href="../../7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md">secure_file_priv</a>。</p>
     </main>
 
     1. 登录到要连接的 OBServer 节点。
