--- a/zh-CN/5.data-migration/11.bypass-import/2.use-load-data-statement-to-bypass-import-data.md
+++ b/zh-CN/5.data-migration/11.bypass-import/2.use-load-data-statement-to-bypass-import-data.md
@@ -50,7 +50,7 @@ LOAD DATA /*+ direct(need_sort,max_error) parallel(N) */ INFILE 'file_name' ...
 
     <main id="notice" type='notice'>
       <h4>注意</h4>
-      <p>由于安全原因，设置系统变量 <code>secure_file_priv</code> 时，只能通过本地 Socket 连接数据库执行修改该全局变量的 SQL 语句。更多信息，请参见 <a href="../../../7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md">secure_file_priv</a>。</p>
+      <p>由于安全原因，设置系统变量 <code>secure_file_priv</code> 时，只能通过本地 Socket 连接数据库执行修改该全局变量的 SQL 语句。更多信息，请参见 <a href="../../7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md">secure_file_priv</a>。</p>
     </main>
 
     1. 登录到要连接 OBServer 节点所在的机器。
