--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.connect-to-oceanbase-database-of-mysql-mode/1.go-sql-driver-mysql-connection-oceanbase-sample-program.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.connect-to-oceanbase-database-of-mysql-mode/1.go-sql-driver-mysql-connection-oceanbase-sample-program.md
@@ -56,7 +56,7 @@ obclient  -hxxx.xxx.xxx.xxx -uroot@test -p****** -P2881 -Doceanbase
 
 ### 步骤二：创建 Go 项目代码
 
-在本地创建一个文件名为 go-oceanbase 的文件夹。也可通过点击 [go-oceanbase](待添加) 下载项目代码。
+在本地创建一个文件名为 go-oceanbase 的文件夹。也可通过点击 [go-oceanbase]([待添加](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/3.develop/demo/Go/go-oceanbase.zip)) 下载项目代码。
 在项目目录下创建以下文件：
 
 ```shell
@@ -137,60 +137,66 @@ go: added github.com/go-sql-driver/mysql v1.7.1
 package main
 
 import (
-    "database/sql"
-    "fmt"
-    "log"
-    
-    _ "github.com/go-sql-driver/mysql" 
-    //填写 go-sql-driver/mysql 的安装路径。
+  "database/sql"
+  "fmt"
+  "log"
+
+  _ "github.com/go-sql-driver/mysql"
+  // 填写 go-sql-driver/mysql 的安装路径。
 )
 
 type Str struct {
-    Name       string
+  Name string
 }
 
 func main() {
-    select_all()
-    }
+  selectAll()
+}
 
-func select_all() {
-    conn := "root@mysql:******@tcp(xxx.xxx.xxx.xxx:2880)/test"
-    //数据库连接参数
-    db, err := sql.Open("mysql", conn)
-    if err != nil {
-        log.Fatal(err)
-    }
-    
-    defer db.Close()
-    
-    if err != nil {
-        log.Fatal(err)
-    }
-    fmt.Printf("success to connect OceanBase with go_mysql driver\n")
-    //创建表 t1
-    db.Query("create table t1(str varchar(256))") 
-    //插入数据
-    db.Query("insert into  t1 values ('Hello OceanBase')") 
-    //查询数据
-    res, err := db.Query("SELECT * FROM t1")
-    //删除表 t1
-    db.Query("drop table t1") 
-    if err != nil {
-        log.Fatal(err)
-    }
-    
-    defer res.Close()
-    
-    if err != nil {
-        log.Fatal(err)
-    }
-    
-    for res.Next() {
-        
-        var str Str
-        res.Scan(&str.Name)
-        fmt.Printf("%s\n", str.Name)
-    }
+func selectAll() {
+  conn := "root@mysql:******@tcp(xxx.xxx.xxx.xxx:2880)/test"
+  // 数据库连接参数
+  db, err := sql.Open("mysql", conn)
+  if err != nil {
+    log.Fatal(err)
+  }
+  defer db.Close()
+
+  if err != nil {
+    log.Fatal(err)
+  }
+
+  fmt.Printf("success to connect OceanBase with go_mysql driver\n")
+  // 创建表 t1
+  _, err = db.Query("create table t1(str varchar(256))")
+  if err != nil {
+    log.Fatal(err)
+  }
+
+  // 插入数据
+  _, err = db.Query("insert into t1 values ('Hello OceanBase')")
+  if err != nil {
+    log.Fatal(err)
+  }
+
+  // 查询数据
+  res, err := db.Query("SELECT * FROM t1")
+  if err != nil {
+    log.Fatal(err)
+  }
+  defer res.Close()
+
+  for res.Next() {
+    var str Str
+    res.Scan(&str.Name)
+    fmt.Printf("%s\n", str.Name)
+  }
+
+  // 删除表 t1
+  _, err = db.Query("drop table t1")
+  if err != nil {
+    log.Fatal(err)
+  }
 }
 ```
 
@@ -237,4 +243,4 @@ Hello OceanBase
 
 ## 更多信息
 
-创建 Go 示例应用程序在 OceanBase 数据库开源社区中也有相关的完整示例，详情请参考 [Go 示例应用程序](https://github.com/oceanbase/ob-example/tree/master/golang-go-sql-driver)。
+有关 Go-SQL-Driver/MySQL 的内容在 OceanBase 数据库开源社区中也有更多信息，详情请参考 [Go-SQL-Driver/MySQL](https://github.com/go-sql-driver/mysql#installation)。
