--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.connect-to-oceanbase-database-of-mysql-mode/1.go-sql-driver-mysql-connection-oceanbase-sample-program.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.connect-to-oceanbase-database-of-mysql-mode/1.go-sql-driver-mysql-connection-oceanbase-sample-program.md
@@ -56,7 +56,7 @@ obclient  -hxxx.xxx.xxx.xxx -uroot@test -p****** -P2881 -Doceanbase
 
 ### 步骤二：创建 Go 项目代码
 
-在本地创建一个文件名为 go-oceanbase 的文件夹。也可通过点击 [go-oceanbase]([待添加](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/3.develop/demo/Go/go-oceanbase.zip)) 下载项目代码。
+在本地创建一个文件名为 go-oceanbase 的文件夹。也可通过点击 [go-oceanbase](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/3.develop/demo/Go/go-oceanbase.zip) 下载项目代码。
 在项目目录下创建以下文件：
 
 ```shell
