--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -2,8 +2,8 @@
 
 ## 标识符长度限制
 
-* MySQL 模式
-
+:::tab
+tab MySQL 模式
   | **数据项** | **最大长度** |
   |---------|----------|
   | 集群名     | 128 字节   |
@@ -16,9 +16,7 @@
   | 视图名     | 64 字节    |
   | 别名      | 255 字节   |
   | 表组名     | 128 字节   |
-
-* Oracle 模式
-
+tab Oracle 模式
   | **类型** | **最大长度** |
   |--------|----------|
   | 集群名    | 128 字节   |
@@ -31,23 +29,24 @@
   | 别名     | 255 字节   |
   | 对象名    | 128 字节   |
   | 表组名    | 128 字节   |
+:::
 
 ## ODP 最大连接数限制
 
-|       类型        |                     最大限制                      |
-|-----------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|       类型        |    最大限制              |
+|-----------------|------------------------------|
 | 单个 ODP 的连接数 | 由 ODP 的 `client_max_connections` 参数控制，默认为 8192。 <blokequote>**说明**  </br>您可以通过增加 ODP 节点数或者修改 `client_max_connections` 配置项值的方式来增大集群的连接总数限制。 </blokequote>|
 
 ## 分区副本数限制
 
 |         类型         |           最大限制            |
-|--------------------|-------------------------------------------------------------------------------------|
+|--------------------|------------------------------|
 | 每个 OBServer 节点的分区副本数 | 无严格限制 </br>**说明**  </br>每个 OBServer 节点的分区副本数可根据租户内存大小来预估，1G 内存约支持约 2 万 tablet。 |
 
 ## 单个表的限制
 
 |  类型   |   最大限制    |
-|-------|-------------------------------------------------------------------------------------------------------------------------------|
+|-------|--------------------|
 | 行长度   | 1.5M 字节   |
 | 列数    | 4096 列    |
 | 索引个数  | 128 个     |
@@ -65,7 +64,8 @@
 
 ## 字符串类型限制
 
-* MySQL 模式
+:::tab
+tab MySQL 模式
 
   |   **类型**    | **最大长度** |
   |-------------|----------|
@@ -75,8 +75,7 @@
   | `VARBINARY` | 1048576 字节 |
   | `BLOB`      | 536870911 字节 |
   | `TEXT`      | 536870911 字节 |
-
-* Oracle 模式
+tab Oracle 模式
 
   |   **类型**    | **最大长度** |
   |-------------|----------|
@@ -85,6 +84,7 @@
   | `VARCHAR2`  | 32767 字节 |
   | `NCHAR`     | 2000 字节  |
   | `NVARCHAR2` | 32767 字节 |
+:::
 
 ## 功能使用限制
 
