--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/3.vertical-scaling-of-tenant-resources.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/3.vertical-scaling-of-tenant-resources.md
@@ -9,11 +9,11 @@
 假设创建了资源池 `pool1` 和 `pool2` ，且其资源配置都是 `uc1`，可以通过修改资源池的资源配置的方式，将资源配置 `uc1` 的 `MAX_CPU` 调整为 `6`；`MIN_MEMORY` 调整为 `36G`，其他选项不变。示例语句如下：
 
 ```sql
-obclient> CREATE RESOURCE UNIT uc1 MAX_CPU 5, MIN_CPU 4, MAX_MEMORY '36G', MIN_MEMORY '32G', MAX_IOPS 128, MIN_IOPS 128, MAX_DISK_SIZE '2T', MAX_SESSION_NUM 64;
+obclient> CREATE RESOURCE UNIT uc1 MAX_CPU 5, MIN_CPU 4, MEMORY_SIZE '36G';    
 obclient>CREATE RESOURCE POOL pool1 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('z1', 'z2');
 obclient>CREATE RESOURCE POOL pool2 UNIT 'uc1', UNIT_NUM 1, ZONE_LIST ('z3');
 obclient>CREATE TENANT tt resource_pool_list=('pool1','pool2');
-obclient>ALTER RESOURCE UNIT uc1 MAX_CPU 6, MIN_MEMORY '36G';
+obclient>ALTER RESOURCE UNIT uc1 MAX_CPU 6, MEMORY_SIZE '36G';
 ```
 
 通过调整资源配置的各个选项，可调整租户的资源池在对应 Zone 上的资源规格，进而影响租户的服务能力。
