410 Aone：Low error modification2

--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/3.check-after-upgrade.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/3.check-after-upgrade.md
@@ -4,12 +4,13 @@
 
 ## 操作步骤
 
-1. 登录 OceanBase 数据库。
+1. 登录 OceanBase 数据库 sys 租户。
+
+   示例如下：
 
    ```shell
    [admin@xxx /home/admin]
-   $obclient -h10.10.10.1 -P2881 -uroot@sys -p
-   Enter password:
+   $obclient -h10.10.10.1 -P2881 -uroot@sys -p******
    Welcome to the OceanBase.  Commands end with ; or \g.
    Your OceanBase connection id is 3221848076
    Server version: OceanBase 4.1.0.0 (r100000682023020119-c760cbb1023d73a2647f28add283646b1569418f) (Built Feb  1 2023 20:07:36)
@@ -17,9 +18,12 @@
    Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
 
    Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-
-   obclient [(none)]>
    ```
+
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p>登录 OceanBase 数据库 sys 租户后，您可以通过视图 <code>DBA_OB_CLUSTER_EVENT_HISTORY</code> 查看集群升级情况，详细信息请参见 <a href="../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/203.oceanbase-dba_ob_cluster_event_history.md">oceanbase.DBA_OB_CLUSTER_EVENT_HISTORY</a>。</p>
+   </main>
 
 2. 查看当前版本。
 
