--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/97.ob-322.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/97.ob-322.md
@@ -18,6 +18,10 @@
 
 * 优化批量 `UPDATE` 语句执行性能。
 
+### 行为变更
+
+MySQL 模式下移除同义词功能。
+
 ### 缺陷修复
 
 * 修复 RPC 通信异常失败时，表与索引列的数据 `CHECKSUM` 值不一致的问题。
@@ -198,9 +202,7 @@
 
 **行为变更**
 
-* MySQL 模式下分区表创建索引的默认行为由全局索引变更为局部索引。
-
-* MySQL 模式下移除同义词功能。
+  MySQL 模式下分区表创建索引的默认行为由全局索引变更为局部索引。
 
 ### 升级路径
 
