fix RN  reverse order

--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/97.ob-322.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/97.ob-322.md
@@ -2,6 +2,62 @@
 
 #RNDate#2022-01-10
 
+## V3.2.2 BP2
+
+### 版本信息
+
+* 发布时间：2022 年 1 月 19日
+
+* 版本号：V3.2.2 BP2
+
+* RPM 版本号：oceanbase-3.2.2-20220119123901
+
+### 功能增强
+
+* 新增在 Oracle 模式下支持 `REVERSE` 函数。
+
+* 优化批量 `UPDATE` 语句执行性能。
+
+### 行为变更
+
+MySQL 模式下移除同义词功能。
+
+### 缺陷修复
+
+* 修复 RPC 通信异常失败时，表与索引列的数据 `CHECKSUM` 值不一致的问题。
+
+* 修复空值列视图的列类型与 Oracle 不一致的问题。
+
+* 修复 mount 文件失败信息报错。
+
+## V3.2.2 BP1
+
+### 版本信息
+
+* 发布时间：2021 年 12 月 15 日
+
+* 版本号：V3.2.2 BP1
+
+* RPM 版本号：oceanbase-3.2.2-20211215001504
+
+### 功能增强
+
+* Oracle 模式下 TRIGGER 支持 `DECODE` 函数。
+
+* `RANGE/HASH/LIST` 分区裁剪支持非单一时间范围。
+
+### 缺陷修复
+
+* 修复最大事务版本号异常为 0 的问题。
+
+* 修复 `MERGE INTO` 语法返回 `affected_rows` 不准确的问题。
+
+* 修复 PL 内 XA 事务包含成功和冲突失败语句结果与 Oracle 不一样的问题。
+
+* 修复并行框架下 `MERGE SORT` 占用内存较多的问题。
+
+* 修复集群重启后，OBProxy 连接集群失败的问题。
+
 ## V3.2.2
 
 ### 版本信息
@@ -9,6 +65,8 @@
 * 发布时间：2022 年 1 月 10 日
 
 * 版本号：V3.2.2
+
+* RPM 版本号：oceanbase-3.2.2-20211130225726
 
 ### 版本定位
 
@@ -24,7 +82,7 @@
   
 * **内核增强**
 
-  Table Group 支持非模版化二级分区；支持主备集群解耦。
+  TableGroup 支持非模版化二级分区；支持主备集群解耦。
   
 * **兼容性**
 
@@ -62,19 +120,19 @@
 
   * 兼容支持 MySQL 5.7 版本的全量 JSON 函数以及 JSON_OVERLAPS()、JSON_VALUE() 等 8.0 版本新增函数。
 
-  有关 JSON 数据类型的详细介绍，参见 [JSON 数据类型概述](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000365138)。
+  有关 JSON 数据类型的详细介绍，参见 [JSON 数据类型概述](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/json-formatted-data-types)。
   
-* Table Group 支持非模版化二级分区
+* TableGroup 支持非模版化二级分区
 
-  用户在创建或删除 Table Group 时可以指定包含 RANGE-RANGE/LIST-LIST 等非模板化二级分区。
+  用户在创建或删除 TableGroup 时可以指定包含 RANGE-RANGE/LIST-LIST 等非模板化二级分区。
 
-  有关非模板化二级分区的详细信息，参见 [创建非模板化二级分区](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000364069)。
+  有关非模板化二级分区的详细信息，参见 [创建非模板化二级分区](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/secondary-partition-table)。
   
 * 支持主备集群解耦
 
   支持将备集群解耦为和主集群无关的新集群。在业务系统升级场景中，用户可以解耦主备集群在新集群上验证业务逻辑，整个业务系统升级过程中，主集群不受影响。
 
-  有关主备集群解耦的详细信息，参见 [主备集群解耦](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363979)。
+  有关主备集群解耦的详细信息，参见 [主备集群解耦](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/implement-the-decoupling-cluster)。
   
 **兼容性增强**
 
@@ -84,9 +142,11 @@
 
     支持在创建索引时选择使用全局索引或局部索引，如果不指定关键字，则默认创建局部索引。在为分区表选择索引时，我们推荐优先使用局部索引，在大多数场景中，局部索引的性能表现优于全局索引。
 
+    更多详细信息，参见 [CREAT INDEX](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/create-index)。
+
   * 新增支持聚合函数 BIT_AND()/BIT_OR()/BIT_XOR()，返回表达式的按位与/或/异或的运算结果。
 
-    更多详细信息，参见 [BIT_AND](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363863)、[BIT_OR](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363785)、[BIT_XOR](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363866)。
+    更多详细信息，参见 [BIT_AND](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/BIT_AND-1)、[BIT_OR](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/BIT_OR-1)、[BIT_XOR](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/BIT_XOR-1)。
 
   * 支持 OUTER JOIN 的连接条件为子查询语句。
 
@@ -112,7 +172,7 @@
   
 * TIMESTAMP 分区精度优化
 
-  当 Oracle 租户下表的分区键类型为 TIMESTAMP/TIMESTAMP WITH TIME ZONE/TIMESTAMP WITH LOCAL TIME ZONE 时，obproxy 通过查询 `__all_virtual_proxy_partition_info` 虚拟表获取对应 TIMESTAMP 分区键精度，使用和 OBServer 节点相同的算法计算分区结果，从而达到精准路由的效果，避免 TIMESTAMP 分区路由时 SQL 语句在 OBServer 节点间的二次路由转发。
+  当 Oracle 租户下表的分区键类型为 TIMESTAMP/TIMESTAMP WITH TIME ZONE/TIMESTAMP WITH LOCAL TIME ZONE 时，OBProxy 通过查询 `__all_virtual_proxy_partition_info` 虚拟表获取对应 TIMESTAMP 分区键精度，使用和 OBServer 相同的算法计算分区结果，从而达到精准路由的效果，避免 TIMESTAMP 分区路由时 SQL 语句在 OBServer 间的二次路由转发。
   
 **性能增强**
 
@@ -138,13 +198,11 @@
 
 |                                                                              配置项                                                                               | 默认值 | 修改类型 | 新默认值 |                   描述                   |
 |----------------------------------------------------------------------------------------------------------------------------------------------------------------|-----|------|------|----------------------------------------|
-| [default_transport_compress_func](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363148) | NA  | 新增   | none | 适用于在网络带宽紧张、CPU 资源相对充裕的场景下，配置网络传输的压缩算法。 |
+| [default_transport_compress_func](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/default_transport_compress_func) | NA  | 新增   | none | 适用于在网络带宽紧张、CPU 资源相对充裕的场景下，配置网络传输的压缩算法。 |
 
 **行为变更**
 
-* MySQL 模式下分区表创建索引的默认行为由全局索引变更为局部索引。
-
-* MySQL 模式下移除同义词功能。
+  MySQL 模式下分区表创建索引的默认行为由全局索引变更为局部索引。
 
 ### 升级路径
 
@@ -160,7 +218,7 @@ OceanBase 数据库 V3.2.2 推荐使用的平台工具版本如下。
 
 |          组件          |   配套版本   |
 |----------------------|----------|
-| obproxy              | V3.2.2   |
+| OBProxy              | V3.2.2   |
 | JDBC 驱动              | V2.2.7.2 |
 | OCP                  | V3.1.4   |
 | ODC                  | V3.2.3   |
@@ -179,53 +237,3 @@ OceanBase 数据库 V3.2.2 推荐使用的平台工具版本如下。
   填充了空值，导致数据在表和索引之间产生了不一致，会引起查询结果不符合预期。
   
 * 修复因 CURSOR 资源小概率释放异常导致临时文件占用磁盘空间持续增大的问题。
-
-## V3.2.2 BP1
-
-
-### 版本信息
-
-* 发布时间：2021 年 12 月 15 日
-
-* 版本号：V3.2.2 BP1
-
-### 功能增强
-
-* Oracle 模式下 TRIGGER 支持 `DECODE` 函数。
-
-* `RANGE/HASH/LIST` 分区裁剪支持非单一时间范围。
-
-### 缺陷修复
-
-* 修复最大事务版本号异常为 0 的问题。
-
-* 修复 `MERGE INTO` 语法返回 `affected_rows` 不准确的问题。
-
-* 修复 PL 内 XA 事务包含成功和冲突失败语句结果与 Oracle 不一样的问题。
-
-* 修复并行框架下 `MERGE SORT` 占用内存较多的问题。
-
-* 修复集群重启后，obproxy 连接集群失败的问题。
-
-## V3.2.2 BP2
-
-
-### 版本信息
-
-* 发布时间：2022 年 1 月 19日
-
-* 版本号：V3.2.2 BP2
-
-### 功能增强
-
-* 新增在 Oracle 模式下支持 `REVERSE` 函数。
-
-* 优化批量 `UPDATE` 语句执行性能。
-
-### 缺陷修复
-
-* 修复 RPC 通信异常失败时，表与索引列的数据 `CHECKSUM` 值不一致的问题。
-
-* 修复空值列视图的列类型与 Oracle 不一致的问题。
-
-* 修复 mount 文件失败信息报错。
