--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -1,11 +1,155 @@
 # OceanBase 数据库企业版 V3.2.4
 
+## V3.2.4 BP3
+
+### 版本信息
+
+* 发布时间：2023 年 4 月 19 日
+* 版本号：V3.2.4 BP3
+* RPM 版本号：oceanbase-3.2.4.3-103000032023041816
+
+### 功能增强
+
+* 新增 OBKV 连接数统计功能，简化 OBKV 请求的问题定位流程。
+
+  * 增加视图 `GV$OB_KV_CONNECTIONS` 提供当前租户所有 KV 类活跃 SESSION 的查询；
+  * 增加视图 `V$OB_KV_CONNECTIONS` 提供当前租户 OBServer 节点上所有 KV 类活跃 SESSION 的查询。
+
+* 优化跨机获取 SEQUENCE CURRVAL 行为。
+
+  * 历史版本中，在 OBProxy 连接 OBServer 节点时，如果连续的一次 NEXTVAL 和 CURRVAL 中间发生路由切换，在不同服务端 SESSION 中调用 CURRVAL 会直接报错。
+  * 新版本支持了 OBProxy 连接 OBServer 节点的 CURRVAL 跨路由同步，在不同服务端 SESSION 中调用 CURRVAL 会优化为返回上一次的 NEXTVAL 值。
+
+### 行为变更
+
+* MySQL 模式下 INSERT VALUES 多行数据插入行为兼容性支持。
+  MySQL 模式下 SQL_MODE 未指定严格模式，对具有 NOT NULL 约束的字段插入 NULL 值时，兼容 MySQL 行为，INSERT VALUES 单行数据插入报错，多行数据插入执行成功，但产生 WARNING 告警。
+
+* Oracle 模式下 SET QUERY 结果集保序行为兼容支持。
+  * 新增支持 Oracle 串行执行和顺序输出行为，通过租户级、SESSION 级系统变量 `_force_order_preserve_set` 控制开启。
+  * 出于性能考虑，默认使用 HASH 而不是 MERGE 算子来做并行执行，例如 UNION ALL/UNION/MINUS/INTERSECT/EXCEPT 等 SET QUERY 行为。
+
+### 配置项变更
+
+| 配置项 | 修改类型 | 默认值 | 描述 |
+| ------| ------ | ------| ------ |
+| `_large_query_yield_timelimit` | 新增 | 30s | 大查询挂起等待的超时时间。属于集群级配置项，取值范围为 (0ms,+∞]。 |
+| `_with_subquery` | 新增 | 0 | 优化器控制 CTE 的优化策略，属于租户级配置项，取值范围：<ul><li> 0：OPTIMIZE，由优化器决策 CTE 是否物化执行还是展开执行  </li><li> 1：MATERIALIZE，强制优化器物化 CTE </li><li> 2：INLINE，强制优化器展开 CTE</li></ul>|
+| `_xsolapi_generate_with_clause` | 新增 | true | 控制优化器是否主动抽取 CTE，属于租户级配置项，取值范围为 \[true,false]。 |
+| `_optimizer_group_by_placement` | 新增 | true | 控制优化器是否打开 `GROUP BY PLACEMENT` 改写功能，属于租户级配置项，取值范围为 \[true,false]。 |
+
+### 系统变量变更
+
+| 系统变量 | 修改类型 | 默认值 | 描述 |
+| ------| ------ | ------| ------ |
+| `_force_order_preserve_set` | 新增 | false | 用于控制 SET QUERY 的改写行为和计划生成逻辑，开启后保证分支串行执行和结果集顺序输出。属于 GLOBAL/SESSION 级变量，取值为 \[true,false]。<blockquote><b>注意</b></br>开启后会影响计算性能。</blockquote> |
+
+### 注意事项
+
+`_max_trx_size` 参数支持限制事务的大小，避免事务过大给系统带来稳定性影响，参数设置为 0 值时，表示不限制事务大小，默认值是 100M。
+配置该参数时需要注意以下几点：
+
+1. 除了 V2.x 及之前版本、V3.2.4 及未来版本，其他版本的 `_max_trx_size` 系统参数配置均不生效。
+2. 从不生效的版本升级到 V3.2.4 及 BP 版本时，会导致事务的限制行为发生变化，从不限制事务大小变成限制 100M。如果不希望限制事务大小，需要在升级前将该参数设置为 0。
+
+### 缺陷修复
+
+* 修复在列 C1、C2、C3 上存在复合索引时 ，SQL 中包含 `(C1 = ？ OR C1 = ？...) AND C2 IN (...) AND  C3 ...` 条件的场景下，范围抽取错误，导致可能出现结果错误的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045552?back=kb)】
+* 修复 PL 中的 DML 使用 SUBSTRB 函数，参数有 PL 内定义的变量时，报错 `ORA-00600: internal error code, arguments: -4016, Internal error` 的问题。
+* 修复 Oracle 模式下，把 PACKAGE 变量做为内部调用的出参场景，存储过程执行结果与原生 Oracle 不兼容的问题。
+* 修复在表达式预计算期间，UPDATE IGNORE 未处理时，导致获取计划时间过长的问题。
+* 修复自动清理任务正常调度时，预期被清理的 `backup_piece` 未删除的问题。
+* 修复在 INSERT ALL STMT 中解析 SELECT STMT 时，内存泄漏的问题。
+* 修复过滤条件下推时，表达式恢复异常导致执行结果不符合预期的问题。
+* 修复物理恢复成功后，部分索引状态异常的问题。
+
+## V3.2.4 BP2
+
+### 版本信息
+
+* 发布时间：2023 年 2 月 28 日
+* 版本号：V3.2.4 BP2
+* RPM 版本号：oceanbase-3.2.4.2-102000042023022717
+
+### 功能增强
+
+* Oracle 模式下系统包 UTL_RAW 新增支持函数 `CAST_TO_NVARCHAR2()`，将 RAW 值转换为 NVARCHAR2 值。
+* Oracle 模式下 DBLINK 支持通过 DNS 域名解析的方式进行连接。
+* Oracle 模式下新增支持 `XMLAGG()`、`XMLPARSE()` 和 `XMLELEMENT()` 三个系统函数。
+* MySQL 模式下支持 `FROM_BASE64()` 和 `TO_BASE64()` 函数。
+* MySQL 模式下系统变量 `DEFAULT_STORAGE_ENGINE` 和 `EVENT_SCHEDULER` 兼容。
+* 视图 `V$OB_SQL_AUDIT` 的字段 `REQUEST_TYPE` 新增取值 11，表示该 SQL 是在 PL 内部执行。
+
+### 注意事项
+
+* 当前版本不推荐使用 ArrayBinding 进行批量插入，建议配置项 `ob_enable_batched_multi_statement` 保持关闭状态。
+* 从 V3.2.4 或 V3.2.4 BP1 版本升级到 V3.2.4 BP2 版本时，升级过程中可能会出现无主选举的阶段，待 OBServer 节点全部启动成功后，恢复正常选择，集群升级成功。
+
+### 缺陷修复
+
+* 修复宏块 SSTable 个数过多时、SLOG 写入超过 32M 数据报错导致集群合并卡主的问题。
+* 修复 MySQL 模式下因 NEST LOOP JOIN 算子执行过滤条件异常导致执行结果错误的问题。
+* 修复宏块重用逻辑异常状态下可能会使宏块重写变多，导致集群合并期间 IO 次数变多的问题。
+* 修复 SQL 在 WHERE 条件中含 4 个及以上索引列，命中索引且含 `in expr` 时，在特定的场景会导致查询返回的结果集不对的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043615?back=kb)】
+* 修复使用 V3.2.4 版本来恢复通过 V2.2.77 版本备份的数据，恢复任务卡主的问题。
+* 修复 Oracle 模式下，在 `AUTO COMMIT` 关闭时，插入部分数据后，UDF 内的 SELECT 读不到未提交的数据。
+* 修复 Oracle 模式下，在 `AUTO COMMIT` 开启时，手动开启事务后 (Start transaction)，执行 PL 内含 DML，事务被自动提交的问题。
+
+## V3.2.4 BP1
+
+### 版本信息
+
+* 发布时间：2023 年 1 月 9 日
+* 版本号：V3.2.4 BP1
+* RPM 版本号：oceanbase-3.2.4.1-101000052023010822
+
+### 功能增强
+
+* 安全优化
+
+  * 备份恢复操作支持动态设置 AK/SK。OceanBase 数据库备份功能支持将对象存储（OSS/COS/OBS）作为备份目的端， 但不具备在备份过程中修改备份目的端的`access_id` 和 `access_key` 的能力，当用户的 AK/SK 发生变更时，需要通过中断日志备份和变更备份目录的方式进行运维。 因此，OceanBase 数据库新增命令 `ALTER SYSTEM change external_storage_dest PATH[=]'xxx?host=xxx'  set  ACCESS_INFO[=]'access_id=xxx&access_key=xxx';` 用以修改备份目的端的 AK/SK，同时也会对 GCONF 中相关内容进行更新和保存。在使用该功能时，需要注意：
+
+    * 建议先停止二次备份任务，再更新设置对象存储的 AK/SK，同时建议一个小时后再删除旧的 AK/SK。  
+    * 如果在二次备份任务执行过程中修改了AK/SK，若检查到任务卡住，则需要强制取消备份任务，变更目录继续进行二次备份任务。
+
+  * DBLINK 配置的密码信息支持加密存储。
+  * OBServer 节点间通信支持 RPC 认证。
+  * 透明加密 (TDE) 能力适配接入阿里云 KMS。
+
+* 监控统计优化，`v$sysstat` 视图新增支持事务耗时统计和 SQL 执行耗时统计。
+
+  * 事务耗时统计包括 `sp trans total used time` 和 `distributed trans total used time` 指标项。
+  * SQL 执行耗时统计包括 `sql local execute time`、`sql remote execute time` 和 `sql distributed execute time` 指标项。
+* MySQL PL 语法兼容，支持 `GET DIAGNOSTICS` 和 `GET STACKED DIAGNOSTICS CONDITION`，支持 `DECLARE CONTINUE HANDLER`，支持 `SIGNAL SQLSTATE`，同时兼容 DEFINER 语法不报错。
+* 性能优化，针对 `insert values/update/delete` 简易 SQL 场景进行优化，使用 Arraybing 批量执行性能提升约 4 倍。
+
+### 兼容性变更
+
+* 修改配置项 `schema_history_expire_time` 的默认值从 7d 变为 30d。
+* 修改配置项 `ob_esi_session_timeout` 的默认值从 1m 变为 10m。
+* 新增配置项 `rpc_client_authentication_method`，用于设置 RPC 客户端的安全认证方式，动态生效，取值范围为 `NONE，PLAIN_KEY，SSL_NO_ENCRYPT，SSL_IO`。默认为 NONE。
+* 新增配置项 `rpc_server_authentication_method`，用于设置 RPC 服务端的安全认证方式，动态生效，取值范围为 `NONE，ALL，PLAIN_KEY，SSL_NO_ENCRYPT，SSL_IO`。默认为 ALL。
+
+### 缺陷修复
+
+* 修复 Oracle 模式下，Package 中使用 Cursor 进行循环操作报错 4179 的问题。
+* 修复 Delete 带有外键的表数据时，内部执行流程在处理外键时触发异常并行，导致报错 Timeout 的问题。
+* 修复租户释放后，因资源释放异常导致后续创建租户报错资源不足的问题。
+* 修复在计划命中 Plan cache 的情况，Merge into 执行结果错误的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045544?back=kb)】
+* 修复在 JSON 生成列上创建索引的场景中存在内存泄漏的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000045547?back=kb)】
+
+### 注意事项
+
+* 如需使用 KMS 存储加密功能，请先将 liboblog 升级到 3.2.4.0 及以上版本，然后再升级 OBServer 版本到 3.2.4 BP1。
+* 如果在 Arraybinding 和 `create table as select` 场景遇到大查询死锁的问题，建议调大配置项参数 `large_query_threshold` 来避免触发死锁。
+
 ## V3.2.4
 
 ### 版本信息
 
 * 发布时间：2022 年 11 月 1 日
 * 版本号：V3.2.4
+* RPM 版本号：oceanbase-3.2.4.0-100000072022102819
 
 ### 版本定位
 
@@ -154,143 +298,3 @@ OceanBase 数据库 V3.2.4 推荐使用的平台工具版本如下。
 ### 注意事项
 
 配置项 `open_cursors` 的默认值为 50，表示单个 SESSION 上最大可以打开的 Cursor 数量。V3.2.4 版本优化限制了单个 SESSION 上最大可以打开的 Prepare Statement 数量，因此在业务选择升级到 V3.2.4 版本时需要评估是否将配置项 `open_cursors` 调大，避免业务 SQL 执行 Prepare Statement 报错。
-
-## V3.2.4 BP1
-
-### 版本信息
-
-* 发布时间：2023 年 1 月 9 日
-* 版本号：V3.2.4 BP1
-
-### 功能增强
-
-* 安全优化
-
-  * 备份恢复操作支持动态设置 AK/SK。OceanBase 数据库备份功能支持将对象存储（OSS/COS/OBS）作为备份目的端， 但不具备在备份过程中修改备份目的端的`access_id` 和 `access_key` 的能力，当用户的 AK/SK 发生变更时，需要通过中断日志备份和变更备份目录的方式进行运维。 因此，OceanBase 数据库新增命令 `ALTER SYSTEM change external_storage_dest PATH[=]'xxx?host=xxx'  set  ACCESS_INFO[=]'access_id=xxx&access_key=xxx';` 用以修改备份目的端的 AK/SK，同时也会对 GCONF 中相关内容进行更新和保存。在使用该功能时，需要注意：
-
-    * 建议先停止二次备份任务，再更新设置对象存储的 AK/SK，同时建议一个小时后再删除旧的 AK/SK。  
-    * 如果在二次备份任务执行过程中修改了AK/SK，若检查到任务卡住，则需要强制取消备份任务，变更目录继续进行二次备份任务。
-
-  * DBLINK 配置的密码信息支持加密存储。
-  * OBServer 节点间通信支持 RPC 认证。
-  * 透明加密 (TDE) 能力适配接入阿里云 KMS。
-
-* 监控统计优化，`v$sysstat` 视图新增支持事务耗时统计和 SQL 执行耗时统计。
-
-  * 事务耗时统计包括 `sp trans total used time` 和 `distributed trans total used time` 指标项。
-  * SQL 执行耗时统计包括 `sql local execute time`、`sql remote execute time` 和 `sql distributed execute time` 指标项。
-* MySQL PL 语法兼容，支持 `GET DIAGNOSTICS` 和 `GET STACKED DIAGNOSTICS CONDITION`，支持 `DECLARE CONTINUE HANDLER`，支持 `SIGNAL SQLSTATE`，同时兼容 DEFINER 语法不报错。
-* 性能优化，针对 `insert values/update/delete` 简易 SQL 场景进行优化，使用 Arraybing 批量执行性能提升约 4 倍。
-
-### 兼容性变更
-
-* 修改配置项 `schema_history_expire_time` 的默认值从 7d 变为 30d。
-* 修改配置项 `ob_esi_session_timeout` 的默认值从 1m 变为 10m。
-* 新增配置项 `rpc_client_authentication_method`，用于设置 RPC 客户端的安全认证方式，动态生效，取值范围为 `NONE，PLAIN_KEY，SSL_NO_ENCRYPT，SSL_IO`。默认为 NONE。
-* 新增配置项 `rpc_server_authentication_method`，用于设置 RPC 服务端的安全认证方式，动态生效，取值范围为 `NONE，ALL，PLAIN_KEY，SSL_NO_ENCRYPT，SSL_IO`。默认为 ALL。
-
-### 缺陷修复
-
-* 修复 Oracle 模式下，Package 中使用 Cursor 进行循环操作报错 4179 的问题。
-* 修复 Delete 带有外键的表数据时，内部执行流程在处理外键时触发异常并行，导致报错 Timeout 的问题。
-* 修复租户释放后，因资源释放异常导致后续创建租户报错资源不足的问题。
-* 修复在计划命中 Plan cache 的情况，Merge into 执行结果错误的问题。
-* 修复在 JSON 生成列上创建索引的场景中存在内存泄漏的问题。
-
-### 注意事项
-
-* 如需使用 KMS 存储加密功能，请先将 liboblog 升级到 3.2.4.0 及以上版本，然后再升级 OBServer 版本到 3.2.4 BP1。
-* 如果在 Arraybinding 和 `create table as select` 场景遇到大查询死锁的问题，建议调大配置项参数 `large_query_threshold` 来避免触发死锁。
-
-## V3.2.4 BP2
-
-### 版本信息
-
-* 发布时间：2023 年 2 月 28 日
-* 版本号：V3.2.4 BP2
-
-### 功能增强
-
-* Oracle 模式下系统包 UTL_RAW 新增支持函数 `CAST_TO_NVARCHAR2()`，将 RAW 值转换为 NVARCHAR2 值。
-* Oracle 模式下 DBLINK 支持通过 DNS 域名解析的方式进行连接。
-* Oracle 模式下新增支持 `XMLAGG()`、`XMLPARSE()` 和 `XMLELEMENT()` 三个系统函数。
-* MySQL 模式下支持 `FROM_BASE64()` 和 `TO_BASE64()` 函数。
-* MySQL 模式下系统变量 `DEFAULT_STORAGE_ENGINE` 和 `EVENT_SCHEDULER` 兼容。
-* 视图 `V$OB_SQL_AUDIT` 的字段 `REQUEST_TYPE` 新增取值 11，表示该 SQL 是在 PL 内部执行。
-
-### 注意事项
-
-* 当前版本不推荐使用 ArrayBinding 进行批量插入，建议配置项 `ob_enable_batched_multi_statement` 保持关闭状态。
-* 从 V3.2.4 或 V3.2.4 BP1 版本升级到 V3.2.4 BP2 版本时，升级过程中可能会出现无主选举的阶段，待 OBServer 节点全部启动成功后，恢复正常选择，集群升级成功。
-
-### 缺陷修复
-
-* 修复宏块 SSTable 个数过多时、SLOG 写入超过 32M 数据报错导致集群合并卡主的问题。
-* 修复 MySQL 模式下因 NEST LOOP JOIN 算子执行过滤条件异常导致执行结果错误的问题。
-* 修复宏块重用逻辑异常状态下可能会使宏块重写变多，导致集群合并期间 IO 次数变多的问题。
-* 修复 SQL 在 WHERE 条件中含 4 个及以上索引列，命中索引且含 `in expr` 时，在特定的场景会导致查询返回的结果集不对的问题。
-* 修复使用 V3.2.4 版本来恢复通过 V2.2.77 版本备份的数据，恢复任务卡主的问题。
-* 修复 Oracle 模式下，在 `AUTO COMMIT` 关闭时，插入部分数据后，UDF 内的 SELECT 读不到未提交的数据。
-* 修复 Oracle 模式下，在 `AUTO COMMIT` 开启时，手动开启事务后 (Start transaction)，执行 PL 内含 DML，事务被自动提交的问题。
-
-## V3.2.4 BP3
-
-### 版本信息
-
-* 发布时间：2023 年 4 月 19 日
-* 版本号：V3.2.4 BP3
-
-### 功能增强
-
-* 新增 OBKV 连接数统计功能，简化 OBKV 请求的问题定位流程。
-
-  * 增加视图 `GV$OB_KV_CONNECTIONS` 提供当前租户所有 KV 类活跃 SESSION 的查询；
-  * 增加视图 `V$OB_KV_CONNECTIONS` 提供当前租户 OBServer 节点上所有 KV 类活跃 SESSION 的查询。
-
-* 优化跨机获取 SEQUENCE CURRVAL 行为。
-
-  * 历史版本中，在 OBProxy 连接 OBServer 节点时，如果连续的一次 NEXTVAL 和 CURRVAL 中间发生路由切换，在不同服务端 SESSION 中调用 CURRVAL 会直接报错。
-  * 新版本支持了 OBProxy 连接 OBServer 节点的 CURRVAL 跨路由同步，在不同服务端 SESSION 中调用 CURRVAL 会优化为返回上一次的 NEXTVAL 值。
-
-### 行为变更
-
-* MySQL 模式下 INSERT VALUES 多行数据插入行为兼容性支持。
-  MySQL 模式下 SQL_MODE 未指定严格模式，对具有 NOT NULL 约束的字段插入 NULL 值时，兼容 MySQL 行为，INSERT VALUES 单行数据插入报错，多行数据插入执行成功，但产生 WARNING 告警。
-
-* Oracle 模式下 SET QUERY 结果集保序行为兼容支持。
-  * 新增支持 Oracle 串行执行和顺序输出行为，通过租户级、SESSION 级系统变量 `_force_order_preserve_set` 控制开启。
-  * 出于性能考虑，默认使用 HASH 而不是 MERGE 算子来做并行执行，例如 UNION ALL/UNION/MINUS/INTERSECT/EXCEPT 等 SET QUERY 行为。
-
-### 配置项变更
-
-| 配置项 | 修改类型 | 默认值 | 描述 |
-| ------| ------ | ------| ------ |
-| `_large_query_yield_timelimit` | 新增 | 30s | 大查询挂起等待的超时时间。属于集群级配置项，取值范围为 (0ms,+∞]。 |
-| `_with_subquery` | 新增 | 0 | 优化器控制 CTE 的优化策略，属于租户级配置项，取值范围：<ul><li> 0：OPTIMIZE，由优化器决策 CTE 是否物化执行还是展开执行  </li><li> 1：MATERIALIZE，强制优化器物化 CTE </li><li> 2：INLINE，强制优化器展开 CTE</li></ul>|
-| `_xsolapi_generate_with_clause` | 新增 | true | 控制优化器是否主动抽取 CTE，属于租户级配置项，取值范围为 \[true,false]。 |
-| `_optimizer_group_by_placement` | 新增 | true | 控制优化器是否打开 `GROUP BY PLACEMENT` 改写功能，属于租户级配置项，取值范围为 \[true,false]。 |
-
-### 系统变量变更
-
-| 系统变量 | 修改类型 | 默认值 | 描述 |
-| ------| ------ | ------| ------ |
-| `_force_order_preserve_set` | 新增 | false | 用于控制 SET QUERY 的改写行为和计划生成逻辑，开启后保证分支串行执行和结果集顺序输出。属于 GLOBAL/SESSION 级变量，取值为 \[true,false]。<blockquote><b>注意</b></br>开启后会影响计算性能。</blockquote> |
-
-### 注意事项
-
-`_max_trx_size` 参数支持限制事务的大小，避免事务过大给系统带来稳定性影响，参数设置为 0 值时，表示不限制事务大小，默认值是 100M。
-配置该参数时需要注意以下几点：
-
-1. 除了 V2.x 及之前版本、V3.2.4 及未来版本，其他版本的 `_max_trx_size` 系统参数配置均不生效。
-2. 从不生效的版本升级到 V3.2.4 及 BP 版本时，会导致事务的限制行为发生变化，从不限制事务大小变成限制 100M。如果不希望限制事务大小，需要在升级前将该参数设置为 0。
-
-### 缺陷修复
-
-* 修复在列 C1、C2、C3 上存在复合索引时 ，SQL 中包含 `(C1 = ？ OR C1 = ？...) AND C2 IN (...) AND  C3 ...` 条件的场景下，范围抽取错误，导致可能出现结果错误的问题。
-* 修复 PL 中的 DML 使用 SUBSTRB 函数，参数有 PL 内定义的变量时，报错 `ORA-00600: internal error code, arguments: -4016, Internal error` 的问题。
-* 修复 Oracle 模式下，把 PACKAGE 变量做为内部调用的出参场景，存储过程执行结果与原生 Oracle 不兼容的问题。
-* 修复在表达式预计算期间，UPDATE IGNORE 未处理时，导致获取计划时间过长的问题。
-* 修复自动清理任务正常调度时，预期被清理的 `backup_piece` 未删除的问题。
-* 修复在 INSERT ALL STMT 中解析 SELECT STMT 时，内存泄漏的问题。
-* 修复过滤条件下推时，表达式恢复异常导致执行结果不符合预期的问题。
-* 修复物理恢复成功后，部分索引状态异常的问题。
