--- a/en-US/7.reference/3.performance-tuning-guide/2.performance-related-tools/3.log/3.trace-log.md
+++ b/en-US/7.reference/3.performance-tuning-guide/2.performance-related-tools/3.log/3.trace-log.md
@@ -1,6 +1,6 @@
 # trace log
 
-The full-link diagnostics feature of OceanBase Database can record the time consumed in each stage of the connection from a client to an OceanBase Database Proxy (ODP) and then to an OBServer, as well as the trace information related to component diagnostics. The trace log records information by span. Each span records the time consumed in an execution interval or module and related information by using tags. The information helps you understand the internal processing logic of the database and locate problems.
+The end-to-end diagnostics feature of OceanBase Database can record the time consumed in each stage of the connection from a client to an OceanBase Database Proxy (ODP) and then to an OBServer, as well as the trace information related to component diagnostics. The trace log records information by span. Each span records the time consumed in an execution interval or module and related information by using tags. The information helps you understand the internal processing logic of the database and locate problems.
 
 ## Spans and tags
 
@@ -156,7 +156,7 @@ Tags
 
 ## Examples
 
-You can use procedures in the PL/SQL package DBMS_MONITOR as needed to enable or disable a full-link diagnostic trace for an application based on different identifiers and record the trace information into the log files. The sampling frequency determines whether logs are sampled and recorded in the memory. Logs may also be recorded in the trace log file. 
+You can use procedures in the PL/SQL package DBMS_MONITOR as needed to enable or disable a end-to-end diagnostic trace for an application based on different identifiers and record the trace information into the log files. The sampling frequency determines whether logs are sampled and recorded in the memory. Logs may also be recorded in the trace log file. 
 <!-- For more information, see [Full-link diagnostics](../../../2.administrator-guide/7.management/3.daily-inspection/9.full-link-detection/1.full-link-diagnosis-overview.md). -->
 Example:
 
