--- a/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/2.disable-opt-trace-mysql.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/2.disable-opt-trace-mysql.md
@@ -1,6 +1,6 @@
 # DISABLE_OPT_TRACE
 
-The `DISABLE_OPT_TRACE` procedure disables the full-link tracing of the optimizer for the current session.
+The `DISABLE_OPT_TRACE` procedure disables the end-to-end tracing of the optimizer for the current session.
 
 ## Syntax
 
