--- a/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/3.enable-opt-trace-mysql.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/3.enable-opt-trace-mysql.md
@@ -1,6 +1,6 @@
 # ENABLE_OPT_TRACE
 
-The `ENABLE_OPT_TRACE` procedure enables the full-link tracing of the optimizer for the current session. After the optimizer tracing is enabled, the generation process of each plan, including the plans of SQL statements in PL, in the current session is traced and a trace file is generated in the log directory of the SQL execution node.
+The `ENABLE_OPT_TRACE` procedure enables the end-to-end tracing of the optimizer for the current session. After the optimizer tracing is enabled, the generation process of each plan, including the plans of SQL statements in PL, in the current session is traced and a trace file is generated in the log directory of the SQL execution node.
 
 ## Syntax
 
