--- a/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/4.set-opt-trace-parameter-mysql.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/4.set-opt-trace-parameter-mysql.md
@@ -1,6 +1,6 @@
 # SET_OPT_TRACE_PARAMETER
 
-The `SET_OPT_TRACE_PARAMETER` procedure sets the full-link tracing parameters of the optimizer for the current session.
+The `SET_OPT_TRACE_PARAMETER` procedure sets the end-to-end tracing parameters of the optimizer for the current session.
 
 ## Syntax
 
