--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/1.dbms-xplan-overview-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/1.dbms-xplan-overview-oracle.md
@@ -17,6 +17,6 @@ The following table describes the DBMS_XPLAN subprograms supported by the curren
 
 | Subprogram | Description |
 | --- | --- |
-| [DISABLE_OPT_TRACE](2.disable-opt-trace-oracle.md) | Disables Full-link Trace for the optimizer of the current session.  |
-| [ENABLE_OPT_TRACE](3.enable-opt-trace-oracle.md) | Enables Full-link Trace for the optimizer of the current session.  |
-| [SET_OPT_TRACE_PARAMETER](4.set-opt-trace-parameter-oracle.md) | Modifies Full-link Trace parameters for the optimizer of the current session.  |
+| [DISABLE_OPT_TRACE](2.disable-opt-trace-oracle.md) | Disables end-to-end tracing for the optimizer of the current session.  |
+| [ENABLE_OPT_TRACE](3.enable-opt-trace-oracle.md) | Enables end-to-end tracing for the optimizer of the current session.  |
+| [SET_OPT_TRACE_PARAMETER](4.set-opt-trace-parameter-oracle.md) | Modifies end-to-end tracing parameters for the optimizer of the current session.  |
