--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/3.enable-opt-trace-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/3.enable-opt-trace-oracle.md
@@ -1,6 +1,6 @@
 # ENABLE_OPT_TRACE
 
-The `ENABLE_OPT_TRACE` procedure enables Full-link Trace for the optimizer of the current session. After Full-link Trace is enabled, all plan generation procedures in the current session, including the SQL plan generation procedures in PL, are traced. In addition, a trace folder is generated in the log directory of the SQL execution node.
+The `ENABLE_OPT_TRACE` procedure enables end-to-end tracing for the optimizer of the current session. After end-to-end tracing is enabled, all plan generation procedures in the current session, including the SQL plan generation procedures in PL, are traced. In addition, a trace folder is generated in the log directory of the SQL execution node.
 
 <main id="notice" >
     <h4>Applicability</h4>
@@ -30,7 +30,7 @@ PROCEDURE ENABLE_OPT_TRACE(
 
 ## Examples
 
-Enable Full-link Trace for the optimizer of the current session.
+Enable end-to-end tracing for the optimizer of the current session.
 
 ```shell
 obclient> CALL DBMS_XPLAN.ENABLE_OPT_TRACE();
