--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/4.set-opt-trace-parameter-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/4.set-opt-trace-parameter-oracle.md
@@ -1,6 +1,6 @@
 # SET_OPT_TRACE_PARAMETER
 
-The `SET_OPT_TRACE_PARAMETER` procedure modifies the Full-link Trace parameters for the optimizer of the current session.
+The `SET_OPT_TRACE_PARAMETER` procedure modifies the end-to-end tracing parameters for the optimizer of the current session.
 
 <main id="notice" >
     <h4>Applicability</h4>
