--- a/en-US/7.reference/3.performance-tuning-guide/3.system-tuning/2.database-parameter-tuning/1.cpu-parameters.md
+++ b/en-US/7.reference/3.performance-tuning-guide/3.system-tuning/2.database-parameter-tuning/1.cpu-parameters.md
@@ -13,4 +13,4 @@
 | enable_perf_event | Specifies whether to enable information collection. | This feature is required in a production environment and can be disabled in performance testing scenarios. |
 | enable_record_trace_log | Specifies whether to enable trace logs. | In a production environment, you can disable this feature when the Perf Event and SQL Audit features are enabled. |
 | _ob_get_gts_ahead_interval | Specifies the time interval at which GTS is obtained in advance. | We recommend that you set the parameter based on your business requirement in the range of 1 ms to 5 ms. If the service response time is long, you can increase the value. |
-| _trace_control_info | Specifies whether to enable full-link tracing | You can disable this feature in performance tests as needed.  |
+| _trace_control_info | Specifies whether to enable end-to-end tracing | You can disable this feature in performance tests as needed.  |
