--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/2.disable-opt-trace-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/2.disable-opt-trace-oracle.md
@@ -1,6 +1,6 @@
 # DISABLE_OPT_TRACE
 
-The `DISABLE_OPT_TRACE` procedure disables Full-link Trace for the optimizer of the current session.
+The `DISABLE_OPT_TRACE` procedure disables end-to-end tracing for the optimizer of the current session.
 
 <main id="notice" >
     <h4>Applicability</h4>
@@ -15,7 +15,7 @@ PROCEDURE DISABLE_OPT_TRACE;
 
 ## Examples
 
-Disable Full-link Trace for the optimizer of the current session.
+Disable end-to-end tracing for the optimizer of the current session.
 
 ```shell
 obclient> CALL DBMS_XPLAN.DISABLE_OPT_TRACE();
