--- a/en-US/9.release-notes/102.community-edition-history-release/100.V4.0/99.V4.0.0.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/100.V4.0/99.V4.0.0.md
@@ -28,7 +28,7 @@ This version provides the following core capabilities:
 
 * Enhanced O&M capabilities
 
-   Full-link tracing is supported. The session status can be monitored and diagnosed based on the Active Sessions History (ASH) report. Standard views are optimized. The recycling of schema history files can be configured. The recycle bin can be automatically purged.
+   End-to-end tracing is supported. The session status can be monitored and diagnosed based on the Active Sessions History (ASH) report. Standard views are optimized. The recycling of schema history files can be configured. The recycle bin can be automatically purged.
 
 ## New features
 
@@ -163,9 +163,9 @@ This version provides the following core capabilities:
 
 ### Enhanced O&M capabilities
 
-* Full-link tracing
+* End-to-end tracing
 
-   OceanBase Database has been put into business operation for a long time. Its internal data access links are very complex. When a timeout error occurs, it is often impossible to quickly locate the root cause. Therefore, an experienced O&M engineer is required to troubleshoot each process, which is hardly responsive and affects the O&M efficiency. OceanBase Database Community Edition V4.0 provides the full-link tracing mechanism to help you locate errors in all processes of the whole link, from business applications to client drivers (JDBC or OCI), ODPs, and OBServers. You can specify the MODULE, ACTION, CLIENT_INFO, and CLIENT_IDENTIFIER parameters for applications by using PL statements or OBClient to identify the link in use. An O&M engineer can use the PL program package to control whether to enable full-link tracing and diagnosis of the specified identification metrics and set diagnosis information output strategies. Diagnosis logs are generated and stored in ODP and OBServer log files in the OpenTracing data model. The engineer can parse the diagnosis logs to obtain relevant diagnosis information such as the execution time of each SQL and transaction requests in the whole link.
+   OceanBase Database has been put into business operation for a long time. Its internal data access links are very complex. When a timeout error occurs, it is often impossible to quickly locate the root cause. Therefore, an experienced O&M engineer is required to troubleshoot each process, which is hardly responsive and affects the O&M efficiency. OceanBase Database Community Edition V4.0 provides the end-to-end tracing mechanism to help you locate errors in all processes of the whole link, from business applications to client drivers (JDBC or OCI), ODPs, and OBServers. You can specify the MODULE, ACTION, CLIENT_INFO, and CLIENT_IDENTIFIER parameters for applications by using PL statements or OBClient to identify the link in use. An O&M engineer can use the PL program package to control whether to enable end-to-end tracing and diagnosis of the specified identification metrics and set diagnosis information output strategies. Diagnosis logs are generated and stored in ODP and OBServer log files in the OpenTracing data model. The engineer can parse the diagnosis logs to obtain relevant diagnosis information such as the execution time of each SQL and transaction requests in the whole link.
 
    <!-- For more information about the full-link tracing mechanism, see [Full-link tracing](../../../7.reference/2.administrator-guide/7.management/3.daily-inspection/9.full-link-detection/1.full-link-diagnosis-overview.md) -->
 
