--- a/en-US/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/en-US/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -67,33 +67,39 @@ The topic provides information on the limitations of various aspects in OceanBas
 
 ## String type limits
 
-* MySQL mode
+:::tab
+tab MySQL mode
 
-   | **Type** | **Maximum length** |
-   |-------------|----------|
-   | `CHAR` | 256 bytes |
-   | `VARCHAR` | 1,048,576 bytes |
-   | `BINARY` | 256 bytes |
-   | `VARBINARY` | 1,048,576 bytes |
-   | `BLOB` | 536,870,911 bytes |
-   | `TEXT` | 536,870,911 bytes |
+   | **Type**    | **Maximum length** |
+   |-------------|--------------------|
+   | `CHAR`      | 256 bytes          |
+   | `VARCHAR`   | 1,048,576 bytes    |
+   | `BINARY`    | 256 bytes          |
+   | `VARBINARY` | 1,048,576 bytes    |
+   | `TINYBLOB`  | 255 bytes          |
+   | `BLOB`      | 65536 bytes        |
+   | `MEDIUMBLOB`| 16,777,216 bytes   |
+   | `LONGBLOB`  | 536,870,911 bytes  |
+   | `TINYTEXT`  | 256 bytes          |
+   | `TEXT`      | 65536 bytes        |
+   | `MEDIUMTEXT`| 16,777,216 bytes   |
+   | `LONGTEXT`  | 536,870,911 bytes  |  
+tab Oracle mode
 
-* Oracle mode
-
-   | **Item** | **Maximum length** |
-   |-------------|----------|
-   | `CHAR` | 2,000 bytes |
-   | `VARCHAR` | 32,767 bytes |
-   | `VARCHAR2` | 32,767 bytes |
-   | `NCHAR` | 2,000 bytes |
-   | `NVARCHAR2` | 32,767 bytes |
-
+   | **Item**    | **Maximum length** |
+   |-------------|--------------------|
+   | `CHAR`      | 2,000 bytes        |
+   | `NCHAR`     | 2,000 bytes        |
+   | `VARCHAR`   | 32,767 bytes       |
+   | `VARCHAR2`  | 32,767 bytes       |
+   | `NVARCHAR2` | 32,767 bytes       |
+   | `BLOB`      | 536,870,911 bytes  |
+   | `CLOB`      | 536,870,911 bytes  |
+:::
 
 ## Limitations on the physical standby database feature
 
 The table below shows the limitations for using the physical standby database feature.
-
-
 
 | Item                         |   Description                                |
 |------------------------------|----------------------------------------------|
