--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -1,12 +1,16 @@
 # 备份前准备
 
-在进行数据备份前，您需要配置 `DATA_BACKUP_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置备份 `DATA_BACKUP_DEST` 参数。
+在进行数据备份前，您需要确认已开启日志归档并配置 `DATA_BACKUP_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置备份 `DATA_BACKUP_DEST` 参数。
 
 ## 数据备份架构
 
 数据备份优先选择 Follower 副本进行备份。数据备份的架构如下图所示。
 
 ![数据备份架构图](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/data-backup-architecture.png)
+
+## 确认已开启归档模式
+
+在执行全量数据备份前，需要先开启归档模式，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份，查看日志归档任务状态的相关操作请参见 [查看归档进度](../3.log-archive/6.view-log-archive-progress.md)。如果确认未开启归档模式，则需要先开启日志归档模式后，再执行数据备份，开启归档模式的相关操作请参见 [开启归档模式](../3.log-archive/3.open-the-log-archive-mode.md)。
 
 ## 配置备份目的端
 
