--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/4.sql-performance-analysis-example/1.analyze-events-waiting-in-a-query-using-sql-audit.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/4.sql-performance-analysis-example/1.analyze-events-waiting-in-a-query-using-sql-audit.md
@@ -1,8 +1,8 @@
-# 通过 SQL Audit 分析查询中等待事件
+# 通过 SQL Audit 分析查询中等待时间
 
-SQL Audit 记录了关于等待事件的如下信息：
+SQL Audit 记录了关于等待时间的如下信息：
 
-* 记录了 4 大类等待事件分别的耗时（即 `APPLICATION_WAIT_TIME`、`CONCURRENCY_WAIT_TIME`、`USER_IO_WAIT_TIME` 和 `SCHEDULE_TIME`)，每类等待事件都涉及很多具体的等待事件。
+* 记录了 4 大类等待事件分别的耗时（即 `APPLICATION_WAIT_TIME`、`CONCURRENCY_WAIT_TIME`、`USER_IO_WAIT_TIME` 和 `SCHEDULE_TIME`），每类等待事件都涉及很多具体的等待时间。
 
 * 记录了耗时最多的等待事件名称（`EVENT`）及该等待事件耗时（`WAIT_TIME_MICRO`）。
 
